force-app/main/default/objects/IntegrationStream__mdt/IntegrationStream__mdt.object-meta.xml
<CustomObject>
    <label>Integration Stream</label>
    <pluralLabel>Integration Stream</pluralLabel>
</CustomObject>