force-app/main/default/objects/IntegrationStream__mdt/fields/ProductionEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ProductionEndpoint__c</fullName>
    <label>Production Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>