force-app/main/default/objects/IntegrationStream__mdt/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XML</fullName>
                <default>true</default>
                <label>XML</label>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>