force-app/main/default/objects/IntegrationStream__mdt/fields/SandboxEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SandboxEndpoint__c</fullName>
    <label>Sandbox Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>